Fin de la mise en place des contenus html du projet

--- a/enigme.html
+++ b/enigme.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <!-- Début header -->
+    <!-- Début du header -->
     <header>
 
         <!-- logo sayna marvel -->
@@ -23,7 +23,7 @@
                 <img src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="icon x">
             </div>
         </a>
-        <!-- fin logo -->
+        <!-- fin des logo -->
 
         <!-- menu de la pages -->
         <div class="menu">
