--- a/wakanda.html
+++ b/wakanda.html
@@ -13,7 +13,7 @@
 
 <body>
 
-    <!-- Début header -->
+    <!-- Début du header -->
     <header>
 
         <!-- logo sayna marvel -->
@@ -24,7 +24,7 @@
                 <img src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="icon x">
             </div>
         </a>
-        <!-- fin logo -->
+        <!-- fin  des logo -->
 
         <!-- menu de la pages -->
         <div class="menu">
@@ -44,7 +44,7 @@
     </header>
     <!-- Fin Header -->
 
-    <!-- Les contenus de la page wakanda  -->
+    <!-- Début contenus -->
     <main>
 
         <!-- section wakanda forever -->
@@ -95,7 +95,7 @@
 
                 <!-- espace contenu youtube -->
                 <div class="videos-container">
-                    <iframe width="100%" height="250" src="https://www.youtube.com/embed/gMLh7wS5Dsw" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    <iframe width="100%" height="250" src="https://www.youtube.com/watch?v=ts30OG3Qld0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     <!-- Inserer Vidéo youtube : https://www.youtube.com/watch?v=ts30OG3Qld0 https://www.youtube.com/watch?v=gMLh7wS5Dsw -->
                 </div>
                 <!-- fin espace contenu youtube  -->
