Des modifications de code, pour des fichier html et css

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
         <!-- logo sayna marvel -->
         <a href="index.html">
             <div class="logo-header">
-                <img src="ressources/Illustrations + Logo/All pages/icon_SAYNA.png" alt="Logo SAYNA">
-                <img src="ressources/Illustrations + Logo/All pages/icon_x.png" alt="icon x">
-                <img src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="icon x">
+                <img class="logo-sayna" src="ressources/Illustrations + Logo/All pages/icon_SAYNA.png" alt="Logo SAYNA">
+                <img class="x" src="ressources/Illustrations + Logo/All pages/icon_x.png" alt="icon x">
+                <img class="logo-marvel" src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="Logo marvel">
             </div>
         </a>
         <!-- fin logo -->
@@ -50,14 +50,18 @@
             <div class="social-logo">
                 <div class="ligne"> </div>
                 <div class="icon-social">
-                    <a href="#"><img src="./ressources/Illustrations + Logo/All pages/icon_facebook.png" alt="logo facebook"></a>
-                    <a href="#"><img src="./ressources/Illustrations + Logo/All pages/icon_instagram.png" alt="logo instagram"></a>
-                    <a href="#"><img src="./ressources/Illustrations + Logo/All pages/icon_twitter.png" alt="logo twitter"></a>
-                    <a href="#"><img src="./ressources/Illustrations + Logo/All pages/icon_tiktok.png" alt="logo tikto"></a>
+                    <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                        <img class="logo_facebook" src="./ressources/Illustrations + Logo/All pages/icon_facebook.png" alt="logo de facebook"></a>
+                    <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                        <img class="logo_instagram" src="./ressources/Illustrations + Logo/All pages/icon_instagram.png" alt="logo d'instagram"></a>
+                    <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                        <img class="logo_twitter" src="./ressources/Illustrations + Logo/All pages/icon_twitter.png" alt="logo de  twitter"></a>
+                    <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                        <img class="logo_tiktok" src="./ressources/Illustrations + Logo/All pages/icon_tiktok.png" alt="logo de tiktok"></a>
                 </div>
             </div>
             <div class="intro-panther">
-                <div class="texy-intro">
+                <div class="text-intro">
                     <h1 class="titre-intro">
                         BLACK PANTHER
                     </h1>
@@ -68,7 +72,7 @@
                         En plus d'être un film qui fait la part belle aux héroïnes, Black Panther rend hommage aux cultures africaine et afro américaine. On y évoque le racisme, la colonisation et les violences contre les afro américains. Ce film marque tout une génération,
                         c’est 100% africain et c’est parfait .
                     </p>
-                    <a href="">Voir plus > </a>
+                    <a class="voir" href="">Voir plus > </a>
                 </div>
             </div>
         </section>
@@ -77,24 +81,28 @@
         <!-- Section Hero slide -->
         <section>
 
-            <div class="conainer-slides">
+            <div class="container-slides">
                 <div class="card">
-                    <img src="./ressources/Illustrations + Logo/Accueil/Pantherhome2.png" alt="KILLMONGER" class="img-active">
+                    <img src="./ressources/Illustrations + Logo/Accueil/Pantherhome2.png" alt="KILLMONGER" class="img-active-1">
                     <div class="decription-slide">
                         <h2 class="titre-slide">KILLMONGER</h2>
                         <p class="texte-slide">
-                            La sauvagerie de N'Jadaka alors qu'il servait dans une unité d'opérations noires de l'armée américaine lui a valu le surnom de Killmonger. D’origine Wakandaise, et se sentant abandoné par sa nation, il cherche à détroner T’Challa dans une quête vers le
+                            La sauvagerie de N'Jadaka alors qu'il servait dans une unité d'opérations noires de l'armée américaine 
+                            lui a valu le surnom de Killmonger. D’origine Wakandaise, et se sentant abandoné par sa nation, il cherche 
+                            à détroner T’Challa dans une quête vers le
                             pourvoir.
                         </p>
-                        <a href="#"> Voir plus > </a>
+                        <a  href="#"> Voir plus > </a>
                     </div>
                 </div>
                 <div class="card">
-                    <img src="./ressources/Illustrations + Logo/Accueil/Pantherhome3.png" alt="OKOYE">
+                    <img src="./ressources/Illustrations + Logo/Accueil/Pantherhome3.png" alt="OKOYE" class="img-active-2">
                     <div class="decription-slide">
                         <h2 class="titre-slide">OKOYE</h2>
                         <p class="texte-slide">
-                            Okoye est le général des Dora Milaje (groupe d’élite de femmes guerrières) et le chef des forces armées et des renseignements wakandais. Témoin du couronnement de T'Challa, elle se joint à lui dans de nombreuses aventures
+                            Okoye est le général des Dora Milaje (groupe d’élite de femmes guerrières) et le chef
+                             des forces armées et des renseignements wakandais. Témoin du couronnement de T'Challa, 
+                             elle se joint à lui dans de nombreuses aventures.
                         </p>
                         <a href="#">Voir plus > </a>
                     </div>
@@ -264,10 +272,20 @@
                 <div class="social">
                     <p class="titre">RETROUVEZ NOUS</p>
                     <div class="social-logo">
-                        <img src="ressources/Illustrations + Logo/All pages/footer3.png" alt="logo facebook">
-                        <img src="ressources/Illustrations + Logo/All pages/footer4.png" alt="logo instagram">
-                        <img src="ressources/Illustrations + Logo/All pages/footer5.png" alt="logo twitter">
-                        <img src="ressources/Illustrations + Logo/All pages/footer6.png" alt="logo tik tok">
+
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer3.png" alt="logo facebook">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer4.png" alt="logo instagram">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer5.png" alt="logo twitter">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer6.png" alt="logo tik tok">
+                        </a>
+
                     </div>
                 </div>
                 <!-- fin Réseaux sociaux -->
