Des modifications de code, pour des fichier html et css

--- a/index.html
+++ b/index.html
@@ -244,7 +244,9 @@
     <footer>
         <!-- cadre logo SAYNA & MARVEL -->
         <div class="logo-footer">
-            <img src="ressources/Illustrations + Logo/All pages/footer2.png" alt="Logo SAYNA & MARVEL">
+            <a href="index.html">
+                <img src="ressources/Illustrations + Logo/All pages/footer2.png" alt="Logo SAYNA & MARVEL">
+            </a>
         </div>
         <!-- Fin cadre Logo SAYNA & MARVEL -->
 
