Finalisation du projet avec des modifications

--- a/enigme.html
+++ b/enigme.html
@@ -18,9 +18,9 @@
         <!-- logo sayna marvel -->
         <a href="index.html">
             <div class="logo-header">
-                <img src="ressources/Illustrations + Logo/All pages/icon_SAYNA.png" alt="Logo SAYNA">
-                <img src="ressources/Illustrations + Logo/All pages/icon_x.png" alt="icon x">
-                <img src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="icon x">
+                <img class="logo-sayna" src="ressources/Illustrations + Logo/All pages/icon_SAYNA.png" alt="Logo SAYNA">
+                <img class="x" src="ressources/Illustrations + Logo/All pages/icon_x.png" alt="icon x">
+                <img class="logo-marvel" src="ressources/Illustrations + Logo/All pages/icon_MARVEL.png" alt="Logo marvel">
             </div>
         </a>
         <!-- fin des logo -->
@@ -117,7 +117,9 @@
     <footer>
         <!-- cadre logo SAYNA & MARVEL -->
         <div class="logo-footer">
-            <img src="ressources/Illustrations + Logo/All pages/footer2.png" alt="Logo SAYNA & MARVEL">
+            <a href="index.html">
+                <img src="ressources/Illustrations + Logo/All pages/footer2.png" alt="Logo SAYNA & MARVEL">
+            </a>
         </div>
         <!-- Fin cadre Logo SAYNA & MARVEL -->
 
@@ -145,10 +147,20 @@
                 <div class="social">
                     <p class="titre">RETROUVEZ NOUS</p>
                     <div class="social-logo">
-                        <img src="ressources/Illustrations + Logo/All pages/footer3.png" alt="logo facebook">
-                        <img src="ressources/Illustrations + Logo/All pages/footer4.png" alt="logo instagram">
-                        <img src="ressources/Illustrations + Logo/All pages/footer5.png" alt="logo twitter">
-                        <img src="ressources/Illustrations + Logo/All pages/footer6.png" alt="logo tik tok">
+
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer3.png" alt="logo facebook">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer4.png" alt="logo instagram">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer5.png" alt="logo twitter">
+                        </a>
+                        <a href="http://www.marvel-cineverse.fr/pages/mcu/encyclopedie/personnages/black-panther.html" target="_blank">
+                            <img src="ressources/Illustrations + Logo/All pages/footer6.png" alt="logo tik tok">
+                        </a>
+
                     </div>
                 </div>
                 <!-- fin Réseaux sociaux -->
